kotlin/programming-kotlin_code/types/output/copyinerr.output
copyinerr.kts:19:26: error: type mismatch: inferred type is Array<Any> but Array<Copyinerr.Fruit> was expected
copyFromTo(bananaBasket, things) //ERROR: type mismatch
                         ^
